<resources>
    <string name="app_name">preview</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">This is a preview for app stack a library for advanced var managment</string>
    <string name="code">get the code on GITHUB</string>
    <string name="add_to_stack">Add</string>
    <string name="pop">pop</string>
    <string name="mod">Mod</string>
    <string name="value">Value</string>
    <string name="place">place</string>
</resources>
